--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
     transform: translate(-50%, 50%);
     
     border-radius: 50%;
-    border: 10px solid white;
+    border: 5px solid white;
     
 }
 .profil {
@@ -68,8 +68,9 @@ body {
     justify-content: space-around;
     align-items: center;
     border-top: 1px solid hsla(0, 0%, 59%, 0.5);
-    line-height: 25px;
+    line-height: 20px;
     letter-spacing: 1px;
+    padding: 0px 25px;
 }
 
 .stats div {
